Table schedule {
  id bigserial [primary key]
  created_at timestamp
  updated_at timestamp
  discipline bigserial
  cabinet text
  time_period text
}

Table discipline {
  id bigserial [primary key]
  created_at timestamp
  updated_at timestamp
  name text
  description text
  credits text
}

Table discipline_schedule {
  id bigserial [primary key]
  created_at timestamp
  updated_at timestamp
  discipline bigserial
  schedule bigserial
}

Ref: discipline_schedule.discipline < discipline.id
Ref: discipline_schedule.schedule < schedule.id